# online_chat

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github.bak/workflows/: build_and_test.yml  docker-publish.yml
backend/: settings.py  urls.py
backend/app/app/: settings.py  urls.py
backend/chat/: models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
config/certs/: certbot.sh
config/nginx/: chat.oatmeal.cc
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/react_chat/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/Components/: EnterWindow.jsx
frontend/src/Components/Page/: PageOnChat.jsx  PageOnChat.module.css
frontend/src/Components/UI/Button/: MyButton.jsx  MyButton.module.css  StartChatButton.jsx  StartChatButton.module.css
frontend/src/Components/UI/Input/: MyInput.jsx  MyInput.module.css  NicknameInput.jsx  NicknameInput.module.css
frontend/src/styles/: index.css
